--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
         <li><a href="index.html" class="Active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact us</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
         <li><a href="terms.html">Terms</a></li>
         <li><a href="videos.html">Videos</a></li>
 
@@ -122,7 +122,7 @@
          <a href=""><i class="fab fa-twitter"></i></a>
          <a href=""><i class="fab fa-instagram"></i></a>
          <a href=""><i class="fab fa-youtube"></i></a>
-         <a href=""><i class="fab fa-whatsapp"></i></a>
+         <a href="https://wa.me/0550978866"><i class="fab fa-whatsapp"></i></a>
          <a href=""><i class="fa fa-envelope"></i></a>
          
         </div>
@@ -137,7 +137,7 @@
           <a href=""><i class="fab fa-twitter"></i></a>
           <a href=""><i class="fab fa-instagram"></i></a>
           <a href=""><i class="fab fa-youtube"></i></a>
-          <a href=""><i class="fab fa-whatsapp"></i></a>
+          <a href="https://wa.me/0550978866"><i class="fab fa-whatsapp"></i></a>
           <a href=""><i class="fa fa-envelope"></i></a>
 </body>
 </html>
