--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
          <a href=""><i class="fab fa-twitter"></i></a>
          <a href=""><i class="fab fa-instagram"></i></a>
          <a href=""><i class="fab fa-youtube"></i></a>
-         <a href="https://wa.me/0550978866"><i class="fab fa-whatsapp"></i></a>
+         <a href="https://wa.me/+233550978866"><i class="fab fa-whatsapp"></i></a>
          <a href=""><i class="fa fa-envelope"></i></a>
          
         </div>
@@ -137,7 +137,7 @@
           <a href=""><i class="fab fa-twitter"></i></a>
           <a href=""><i class="fab fa-instagram"></i></a>
           <a href=""><i class="fab fa-youtube"></i></a>
-          <a href="https://wa.me/0550978866"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://wa.me/+233550978866"><i class="fab fa-whatsapp"></i></a>
           <a href=""><i class="fa fa-envelope"></i></a>
 </body>
 </html>
