Update1 index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="about-text">
         <p>About Me</p>
         <p>Developer & Designer in Web & Graphics   </p>
-        <p>Hello,My name is Nketiah Gilbert. I am a Web Developer and Designer.
+        <p>Hello,
+           My name is Nketiah Gilbert. I am a Web Developer and Designer.
             I am also a Graphic Designer. If you have any project or if you want
              to make a website for your business or any graphic design contact me
             as soon a possible. My prices are also affordable.</p>
